--- a/package.json
+++ b/package.json
@@ -1,28 +1,29 @@
 {
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
-  },
-  "dependencies": {
-    "@prisma/client": "^5.5.2",
-    "@react-spring/web": "^9.7.3",
-    "@supabase/ssr": "latest",
-    "@supabase/supabase-js": "latest",
-    "@vercel/analytics": "^1.1.1",
-    "autoprefixer": "10.4.15",
-    "next": "latest",
-    "postcss": "8.4.29",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "tailwindcss": "3.3.3",
-    "typescript": "5.1.3"
-  },
-  "devDependencies": {
-    "@types/node": "20.3.1",
-    "@types/react": "18.2.8",
-    "@types/react-dom": "18.2.5",
-    "encoding": "^0.1.13"
-  }
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "postinstall": "prisma generate"
+    },
+    "dependencies": {
+        "@prisma/client": "^5.5.2",
+        "@react-spring/web": "^9.7.3",
+        "@supabase/ssr": "latest",
+        "@supabase/supabase-js": "latest",
+        "@vercel/analytics": "^1.1.1",
+        "autoprefixer": "10.4.15",
+        "next": "latest",
+        "postcss": "8.4.29",
+        "react": "18.2.0",
+        "react-dom": "18.2.0",
+        "tailwindcss": "3.3.3",
+        "typescript": "5.1.3"
+    },
+    "devDependencies": {
+        "@types/node": "20.3.1",
+        "@types/react": "18.2.8",
+        "@types/react-dom": "18.2.5",
+        "encoding": "^0.1.13"
+    }
 }
