--- a/.env.local.example
+++ b/.env.local.example
@@ -1,3 +1,5 @@
 NEXT_PUBLIC_SUPABASE_URL=your-project-url
 NEXT_PUBLIC_SUPABASE_ANON_KEY=your-anon-key
 DATABASE_URL=your-url-database
+URL_APP=http://localhost:3000
+NODE_ENV=development
